--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title">Shaat, Hemming Code</h1>
+            <h1 class="title">Dayanch, Hemming Code</h1>
         </header>
         <main class="main">
             <div class="field">
